nextcloud/maria.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    name: nextcloud
---
kind: Service
apiVersion: v1
metadata:
  name: mariadb
  namespace: nextcloud
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: db
  template:
    metadata:
      labels:
        app: mariadb
        tier: db
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.6.4
          resources:
            limits:
              memory: 512Gi
              cpu: 500m
            requests:
              memory: 384Mi
              cpu: 200m
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb
          ports:
            - containerPort: 3306
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb
      # nodeSelector:
      #   disktype: ssd
