nextcloud/nextcloud.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  labels:
    name: nextcloud
  name: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
    tier: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextcloud
      tier: app
  template:
    metadata:
      labels:
        app: nextcloud
        tier: app
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.3-alpine
          resources:
            limits:
              memory: 64Mi
              cpu: 200m
            requests:
              memory: 16Mi
              cpu: 50m
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: nginx-logs
              mountPath: /var/log/nginx
            - name: nextcloud-app
              mountPath: /var/www/html
            - name: nextcloud-data
              mountPath: /var/www/html/data
          ports:
            - containerPort: 80
        - name: nextcloud
          image: nextcloud:22.2.3-fpm-alpine
          resources:
            limits:
              memory: 768Mi
              cpu: "1"
            requests:
              memory: 64Mi
              cpu: 100m
          volumeMounts:
            - name: fpm-php-www-config
              mountPath: /usr/local/etc/php-fpm.d
            - name: nextcloud-app
              mountPath: /var/www/html
            - name: nextcloud-data
              mountPath: /var/www/html/data
          ports:
            - containerPort: 9000
      volumes:
        - name: fpm-php-www-config
          configMap:
            name: fpm-php-www-config
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-logs
          persistentVolumeClaim:
            claimName: nginx-logs
        - name: nextcloud-app
          persistentVolumeClaim:
            claimName: nextcloud-app
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - worker
              - matchExpressions:
                  - key: lindon.endor/machine-type
                    operator: In
                    values:
                      - pi4-large
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - nextcloud
                topologyKey: kubernetes.io/hostname
              weight: 100
---
