nextcloud/postgresql.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    name: nextcloud
---
kind: Service
apiVersion: v1
metadata:
  name: postgresql
  namespace: nextcloud
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: nextcloud
  labels:
    app: postgresql
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
      tier: db
  template:
    metadata:
      labels:
        app: postgresql
        tier: db
    spec:
      containers:
        - name: postgresql
          image: postgres:14.0-alpine
          resources:
            limits:
              memory: 512Gi
              cpu: 500m
            requests:
              memory: 384Mi
              cpu: 200m
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgresql
          ports:
            - containerPort: 5432
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgresql
      # nodeSelector:
      #   disktype: ssd
