nextcloud/redis.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    name: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app: redis
    tier: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      tier: cache
  template:
    metadata:
      labels:
        app: redis
        tier: cache
    spec:
      containers:
        - name: redis
          image: redis:7.0.5-alpine
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 64Mi
              cpu: 100m
          volumeMounts:
            - mountPath: /data
              name: redis
          ports:
            - containerPort: 6379
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
      nodeSelector:
        pictaviensis.regnum/storage-ssd: "fast"
